tests/resources/errors/errors22.ac
import std;
import std.Error;

struct TestError :: *Error {
    const char* get_name() const {
        return "TestError";
    }
    const char* get_message() const {
        return "test error msg";
    }
}

interface I {
    void foo() raises TestError;
}

struct A :: *I {
    void foo() raises TestError {
        std.print("foo called!");
        raise TestError{};
    }
}

void main() {
    A a;
    I* i = &a;
    try i.foo();
}